Fixed #370 - new transaction page: repeating option inputs not visible in safari

--- a/src/main/resources/static/css/dark/transactions.css
+++ b/src/main/resources/static/css/dark/transactions.css
@@ -14,3 +14,7 @@
 .chips .chip.selected {
     background-color: #2E79B9;
 }
+
+.input-min-width {
+    min-width: 100px;
+}
